--- a/bootkernel/kernel/RaspberryPi3Gadget.config
+++ b/bootkernel/kernel/RaspberryPi3Gadget.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.15.80 Kernel Configuration
+# Linux/arm64 5.15.92 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (crosstool-NG 1.25.0) 10.3.0"
 CONFIG_CC_IS_GCC=y
@@ -782,6 +782,7 @@ CONFIG_IP_MULTICAST=y
 # CONFIG_INET_AH is not set
 # CONFIG_INET_ESP is not set
 # CONFIG_INET_IPCOMP is not set
+CONFIG_INET_TABLE_PERTURB_ORDER=16
 # CONFIG_INET_DIAG is not set
 # CONFIG_TCP_CONG_ADVANCED is not set
 CONFIG_TCP_CONG_CUBIC=y
@@ -2065,6 +2066,7 @@ CONFIG_VIDEO_IMX335=m
 CONFIG_VIDEO_IMX355=m
 CONFIG_VIDEO_IMX412=m
 CONFIG_VIDEO_IMX519=m
+CONFIG_VIDEO_IMX708=m
 CONFIG_VIDEO_OV02A10=m
 CONFIG_VIDEO_OV2311=m
 CONFIG_VIDEO_OV2640=m
@@ -3114,7 +3116,6 @@ CONFIG_EXTCON=y
 # CONFIG_EXTCON_RT8973A is not set
 # CONFIG_EXTCON_SM5502 is not set
 # CONFIG_EXTCON_USB_GPIO is not set
-# CONFIG_EXTCON_USBC_TUSB320 is not set
 # CONFIG_MEMORY is not set
 CONFIG_IIO=y
 CONFIG_IIO_BUFFER=y
