Don't put /usr/local/share/ in specfile.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20976 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/common/Makefile
+++ b/toolchain/common/Makefile
@@ -82,8 +82,8 @@ package.rpm:
 	rm -rf					$(RPMDIR)/usr/local/share/muntsos/examples/firmware
 	rm -rf					$(RPMDIR)/usr/local/share/muntsos/examples/ada/freemodbus
 	sed -i 's@$$(HOME)/muntsos@/usr/local/share/muntsos@g' $(RPMDIR)/usr/local/share/muntsos/examples/*/*/Makefile
-	cd $(RPMDIR) && $(FIND) * -type d -exec echo "%dir /{}" ";" | grep -v DEBIAN >>../specfile
-	cd $(RPMDIR) && $(FIND) * -type f -exec echo "/{}" ";" | grep -v DEBIAN >>../specfile
+	cd $(RPMDIR) && $(FIND) /usr/local/share/muntsos -type d -exec echo "%dir /{}" ";" | grep -v DEBIAN >>../specfile
+	cd $(RPMDIR) && $(FIND) /usr/local/share/muntsos -type f -exec echo "/{}" ";" | grep -v DEBIAN >>../specfile
 	rpmbuild --buildroot=`pwd`/$(RPMDIR) --define="_topdir `pwd`/rpmbuild" -bb specfile
 	cp rpmbuild/RPMS/*/*.rpm .	
 	rm -rf rpmbuild
