Don't need to replace examples/ada/programs/default.gpr. Remove specfile after successful build.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20981 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/rpms/muntsos-common/Makefile
+++ b/toolchain/rpms/muntsos-common/Makefile
@@ -41,13 +41,12 @@ package.rpm:
 	mkdir -p				$(DSTDIR)
 	cp -R -P -p $(MUNTSOS)/*		$(DSTDIR)
 	chmod -R u+w				$(DSTDIR)
-	cp $(LIBSIMPLEIO)/ada/projects/default.gpr $(DSTDIR)/examples/ada/programs
 	sed -i 's@$$(HOME)/muntsos@/usr/local/share/muntsos@g' $(DSTDIR)/examples/*/*/Makefile
 	cd $(RPMDIR) && find usr/local/share/muntsos -type d -exec echo "%dir /{}" ";" >>../specfile
 	cd $(RPMDIR) && find usr/local/share/muntsos -type f -exec echo "/{}" ";"      >>../specfile
 	rpmbuild --buildroot=`pwd`/$(RPMDIR) --define="_topdir `pwd`/rpmbuild" -bb specfile
 	cp rpmbuild/RPMS/*/*.rpm .	
-	rm -rf rpmbuild
+	rm -rf rpmbuild specfile
 
 ###############################################################################
 
