Expand @@SUFFIX properly
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20983 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/rpms/muntsos-dev/Makefile
+++ b/toolchain/rpms/muntsos-dev/Makefile
@@ -40,8 +40,9 @@ default: package.rpm
 
 package.rpm:
 	cp specfile.template			specfile
-	sed -i 's/@@VERSION@@/$(RPMVER)/g'	specfile
 	sed -i 's/@@TARGET@@/$(RPMTARGET)/g'	specfile
+	sed -i 's/@@SUFFIX@@/$(RPMSUFFIX)/g'	specfile
+	sed -i 's/@@VERSION@@/$(RPMVER)/g'	specfile
 	mkdir -p				$(RPMDIR)/usr/local
 	cp -R -P -p /usr/local/fpc-$(RPMTUPLE)	$(RPMDIR)/usr/local
 	cp -R -P -p /usr/local/gcc-$(RPMTUPLE)	$(RPMDIR)/usr/local
