Disabled automatic dependency generation
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20988 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/rpms/muntsos-dev/specfile.template
+++ b/toolchain/rpms/muntsos-dev/specfile.template
@@ -30,6 +30,7 @@ License:	Mixed
 Packager:	Philip Munts <phil@munts.net>
 Source:		https://github.com/pmunts/muntsos
 Requires:	libsimpleio-common, muntsos-common
+AutoReqProv:	no
 
 %description
 MuntsOS Embedded Linux cross-toolchain for @@TARGET@@
