Changed dependency from libsimpleio-muntsos back to libsimpleio-common
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21001 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/rpms/muntsos-dev/specfile.template
+++ b/toolchain/rpms/muntsos-dev/specfile.template
@@ -29,7 +29,7 @@ Group:		Programming
 License:	Mixed
 Packager:	Philip Munts <phil@munts.net>
 Source:		https://github.com/pmunts/muntsos
-Requires:	muntsos-common, libsimpleio-muntsos
+Requires:	muntsos-common, libsimpleio-common
 AutoReqProv:	no
 
 %description
