Added goop to produce a Debian package file
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21250 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/arm-gnu/Makefile
+++ b/toolchain/arm-gnu/Makefile
@@ -20,32 +20,102 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-DOWNLOADS	:= $(shell pwd)/downloads
-MANIFEST	?= AArch64.manifest
+MUNTSOS    ?= ../..
 
-default: build.done
+include $(MUNTSOS)/include/$(BOARDNAME).mk
+
+ABEURL		= http://git.linaro.org/git/toolchain/abe.git
+DISTFILES	:= $(shell pwd)/distfiles
+DESTFILES	:= cross/builds/destdir/x86_64-pc-linux-gnu
+ifeq ($(BOARDNAME), RaspberryPi3)
+MANIFEST	:= AArch64.manifest
+else
+MANIFEST	:= $(BOARDNAME).manifest
+endif
+
+BUILDNUM	?= 1
+OSNAME		?= unknown
+PKGNAME		:= gcc-$(TOOLCHAIN_NAME)
+PKGVER		:= $(shell date +%Y.%j).$(BUILDNUM)
+PKGARCH		:= $(shell dpkg --print-architecture)
+PKGSUFFIX	:= $(PKGVER)-$(OSNAME)-$(PKGARCH)
+PKGDIR		:= $(PKGNAME)-$(PKGSUFFIX)
+PKGFILE		:= $(PKGNAME)-$(PKGSUFFIX).deb
+
+default: package.deb
+
+################################################################################
 
 # Clone ABE
 
 abe.done:
-	git clone https://git.linaro.org/toolchain/abe.git
+	git clone $(ABEURL)
 	touch $@
+
+################################################################################
 
 # Build cross-toolchain
 
-build.done: abe.done
+cross.done: abe.done
 	test -x /usr/local/bin/git-new-workdir
-	test ! -d build && mkdir build && cd build && ../abe/configure
-	cd build && ../abe/abe.sh --snapshots $(DOWNLOADS) --manifest ../$(MANIFEST) --build all
+	test ! -d cross && mkdir cross && cd cross && ../abe/configure
+	cd cross && ../abe/abe.sh --snapshots $(DISTFILES) --manifest ../$(MANIFEST) --build all
 	touch $@
+
+################################################################################
+
+# Reconstitute previous build from installed files
+
+reconstitute:
+	mkdir -p $(DESTFILES)
+	rmdir $(DESTFILES)
+	cp -R -P -p $(TOOLCHAIN_DIR) $(DESTFILES)
+	chmod -R u+w $(DESTFILES)
+	rm -f $(DESTFILES)/share/gpr
+	touch abe.done cross.done
+
+################################################################################
+
+# Create Debian package
+
+package.deb: cross.done
+	mkdir -p					$(PKGDIR)/DEBIAN
+	install -cm 0644 control			$(PKGDIR)/DEBIAN
+	sed -i s/@@NAME@@/$(PKGNAME)/g			$(PKGDIR)/DEBIAN/control
+	sed -i s/@@ARCH@@/$(PKGARCH)/g			$(PKGDIR)/DEBIAN/control
+	sed -i s/@@VERSION@@/$(PKGVER)/g		$(PKGDIR)/DEBIAN/control
+ifeq ($(BOARDNAME), RaspberryPi3)
+	sed -i s/@@BOARDNAME@@/AArch64/g		$(PKGDIR)/DEBIAN/control
+else
+	sed -i s/@@BOARDNAME@@/$(BOARDBASE)/g		$(PKGDIR)/DEBIAN/control
+endif
+	mkdir -p					$(PKGDIR)$(TOOLCHAIN_DIR)
+	rmdir						$(PKGDIR)$(TOOLCHAIN_DIR)
+	cp -R -P -p $(DESTFILES)			$(PKGDIR)$(TOOLCHAIN_DIR)
+	mkdir -p					$(PKGDIR)$(TOOLCHAIN_DIR)/share/gpr
+	install -cm 0644 template.cgpr			$(PKGDIR)$(TOOLCHAIN_DIR)/share/gpr/$(CONFIGURE_NAME).cgpr
+	sed -i 's/@@CONFIGURE_NAME@@/$(CONFIGURE_NAME)/g' $(PKGDIR)$(TOOLCHAIN_DIR)/share/gpr/$(CONFIGURE_NAME).cgpr
+	sed -i 's:@@TOOLCHAIN_DIR@@:$(TOOLCHAIN_DIR):g'	$(PKGDIR)$(TOOLCHAIN_DIR)/share/gpr/$(CONFIGURE_NAME).cgpr
+ifeq ($(BOARDNAME), RaspberryPi3)
+	ln -s $(CONFIGURE_NAME).cgpr			$(PKGDIR)$(TOOLCHAIN_DIR)/share/gpr/RaspberryPi3.cgpr
+	ln -s $(CONFIGURE_NAME).cgpr			$(PKGDIR)$(TOOLCHAIN_DIR)/share/gpr/RaspberryPi4.cgpr
+else
+	ln -s $(CONFIGURE_NAME).cgpr			$(PKGDIR)$(TOOLCHAIN_DIR)/share/gpr/$(BOARDBASE).cgpr
+endif
+	find $(PKGDIR)/usr/local/$(PKGNAME) -type f -executable -exec strip {} ";" 2>&1 | grep -v recognize | grep -v recognise ; true
+	chmod -R ugo-w					$(PKGDIR)$(TOOLCHAIN_DIR)
+	fakeroot dpkg-deb --build			$(PKGDIR)
+	chmod -R ugo+w					$(PKGDIR)
+
+################################################################################
 
 # Remove working files
 
 clean:
-	true
+	rm -rf $(PKGNAME)*
 
 reallyclean: clean
-	rm -rf build build.done
+	rm -rf cross*
 
 distclean: reallyclean
-	rm -rf abe abe.done downloads
+	rm -rf abe* $(DISTFILES)
