--- a/toolchain/libaws/Makefile
+++ b/toolchain/libaws/Makefile
@@ -1,6 +1,6 @@
 # Makefile definitions for building GNAT Ada application programs
 
-# Copyright (C)2017-2022, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2017-2023, Philip Munts dba Munts Technologies.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -21,7 +21,7 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 LIBSIMPLEIO	?= $(HOME)/libsimpleio
-MUNTSOS		?= $(HOME)/muntsos
+MUNTSOS		?= ../..
 
 include $(MUNTSOS)/include/$(BOARDNAME).mk
 
