Need a minor patch to compile libzmq with GCC 12.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21259 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libs/Makefile
+++ b/toolchain/libs/Makefile
@@ -581,6 +581,7 @@ $(ZEROMQ_DIST):
 
 $(ZEROMQ_SRC): $(ZEROMQ_DIST)
 	tar xzf $(ZEROMQ_DIST)
+	cd $(ZEROMQ_SRC) && patch -b -p0 <../zeromq.patch
 
 # Build ZeroMQ
 
