Updated some library components:
hidapi to 0.14.0.
OpenSSL to 1.1.1v.
curl to 8.2.1.
libmysql to 3.3.5.


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21266 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libs/Makefile
+++ b/toolchain/libs/Makefile
@@ -48,7 +48,7 @@ LIBUSB_URL	= $(LIBUSB_SERVER)/$(LIBUSB_TARBALL)
 LIBUSB_DIST	= $(TEMP)/$(LIBUSB_TARBALL)
 
 HIDAPI_NAME	= hidapi
-HIDAPI_VER	= 0.13.0
+HIDAPI_VER	= 0.14.0
 HIDAPI_SRC	= hidapi-$(HIDAPI_NAME)-$(HIDAPI_VER)
 HIDAPI_TARBALL	= $(HIDAPI_NAME)-$(HIDAPI_VER).tar.gz
 HIDAPI_SERVER	= https://github.com/libusb/hidapi/archive
@@ -56,7 +56,7 @@ HIDAPI_URL	= $(HIDAPI_SERVER)/$(HIDAPI_TARBALL)
 HIDAPI_DIST	= $(TEMP)/$(HIDAPI_TARBALL)
 
 OPENSSL_NAME	= openssl
-OPENSSL_VER	= 1.1.1t
+OPENSSL_VER	= 1.1.1v
 OPENSSL_SRC	= $(OPENSSL_NAME)-$(OPENSSL_VER)
 OPENSSL_TARBALL	= $(OPENSSL_SRC).tar.gz
 OPENSSL_SERVER	= http://www.openssl.org/source
@@ -73,7 +73,7 @@ ZLIB_URL	= $(ZLIB_SERVER)/$(ZLIB_TARBALL)
 ZLIB_DIST	= $(TEMP)/$(ZLIB_TARBALL)
 
 CURL_NAME	= curl
-CURL_VER	= 7.88.1
+CURL_VER	= 8.2.1
 CURL_SRC	= $(CURL_NAME)-$(CURL_VER)
 CURL_TARBALL	= $(CURL_NAME)-$(CURL_VER).tar.gz
 CURL_SERVER	= http://curl.se/download
@@ -122,7 +122,7 @@ LIBSODIUM_URL	= $(LIBSODIUM_SERVER)/$(LIBSODIUM_TARBALL)
 LIBSODIUM_DIST	= $(TEMP)/$(LIBSODIUM_TARBALL)
 
 LIBMYSQLCLIENT_NAME	= mariadb-connector-c
-LIBMYSQLCLIENT_VER	= 3.3.4
+LIBMYSQLCLIENT_VER	= 3.3.5
 LIBMYSQLCLIENT_SRC	= $(LIBMYSQLCLIENT_NAME)-$(LIBMYSQLCLIENT_VER)-src
 LIBMYSQLCLIENT_TARBALL	= $(LIBMYSQLCLIENT_NAME)-$(LIBMYSQLCLIENT_VER)-src.tar.gz
 LIBMYSQLCLIENT_SERVER	= https://downloads.mariadb.com/Connectors/c/connector-c-$(LIBMYSQLCLIENT_VER)
