--- a/toolchain/arm-gnu/Makefile
+++ b/toolchain/arm-gnu/Makefile
@@ -84,6 +84,8 @@ endif
 	mkdir -p					$(PKGDIR)$(TOOLCHAIN_DIR)
 	rmdir						$(PKGDIR)$(TOOLCHAIN_DIR)
 	cp -R -P -p $(DESTFILES)			$(PKGDIR)$(TOOLCHAIN_DIR)
+	ln -s -f ../../sbin/ldconfig			$(PKGDIR)$(LIBSBINDIR)/ldconfig
+	ln -s -f ../../sbin/sln				$(PKGDIR)$(LIBSBINDIR)/sln
 	mkdir -p					$(PKGDIR)$(TOOLCHAIN_DIR)/share/gpr
 	install -cm 0644 template.cgpr			$(PKGDIR)$(TOOLCHAIN_DIR)/share/gpr/$(CONFIGURE_NAME).cgpr
 	sed -i 's/@@CONFIGURE_NAME@@/$(CONFIGURE_NAME)/g' $(PKGDIR)$(TOOLCHAIN_DIR)/share/gpr/$(CONFIGURE_NAME).cgpr
